minor, go yuck, kick .ggo
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -63,7 +63,7 @@ if USE_ASM_CORUS
 truffle_LDADD += libcoru.a
 endif  USE_ASM_CORUS
 truffle_LDADD += -lm
-BUILT_SOURCES += truffle.x truffle.xh
+BUILT_SOURCES += truffle.yucc
 
 
 SUFFIXES = .yuck .yucc
