chore, move yuck check into sxe-yuck.m4
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/configure.ac
+++ b/configure.ac
@@ -71,10 +71,7 @@ if test "${use_asm_corus}" = "yes"; then
 fi
 
 ## check for yuck helper
-PKG_CHECK_EXISTS([yuck >= 0.0], [have_yuck="yes"], [have_yuck="no"])
-AC_MSG_CHECKING([for yuck])
-AM_CONDITIONAL([HAVE_YUCK], [test "${have_yuck}" = "yes"])
-AC_MSG_RESULT([${have_yuck}])
+SXE_CHECK_YUCK
 
 
 ## trivial, no special stuff needed
