fix, PEBKAC, name truffle.yuck as source (instead of truffle.ggo)
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -57,7 +57,7 @@ endif  USE_ASM_CORUS
 
 ## truffle umbrella command kit
 bin_PROGRAMS += truffle
-truffle_SOURCES = truffle.c truffle.ggo
+truffle_SOURCES = truffle.c truffle.yuck
 truffle_LDADD = libtruffle.a
 if USE_ASM_CORUS
 truffle_LDADD += libcoru.a
