minor, deviate from tinav system, use explicit one-catches-all entry point version.m4
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ EXTRA_DIST =
 DISTCLEANFILES =
 
 EXTRA_DIST += build-aux/git-version-gen
-EXTRA_DIST += m4/.dir
+EXTRA_DIST += version.m4
 
 DISTCLEANFILES += version.mk
 
