chore, make .yucc generation depend on version.mk
Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -71,6 +71,7 @@ SUFFIXES = .yuck .yucc
 version.c: version.c.in $(top_builddir)/version.mk
 	sed -e 's,[@]VERSION[@],$(VERSION),g' <$(srcdir)/$@.in >$@
 
+%.yucc: $(top_builddir)/version.mk
 .yuck.yucc:
 	$(AM_V_GEN) PATH=$(top_builddir)/build-aux:"$${PATH}" \
 		yuck$(EXEEXT) gen --version=$(VERSION) $< > $@ || \
