minor, use an implicit rule for .yuck->.yucc generation instead of suffix rule
Reason is we need the .yucc file depend on version.mk also.

Signed-off-by: Sebastian Freundt <freundt@ga-group.nl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -62,10 +62,7 @@ truffle_LDADD += -lm
 BUILT_SOURCES += truffle.yucc
 
 
-SUFFIXES = .yuck .yucc
-
-%.yucc: $(top_builddir)/version.mk
-.yuck.yucc:
+%.yucc: %.yuck $(top_srcdir)/configure $(top_builddir)/version.mk
 	$(AM_V_GEN) PATH=$(top_builddir)/build-aux:"$${PATH}" \
 		yuck$(EXEEXT) gen --version=$(VERSION) $< > $@ || \
 		{ rm -f -- $@; false; }
