--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ dnl Autoconf startup.
 dnl -------------------------------------------------------------------------
 
 AC_PREREQ([2.63])
-AC_INIT([truffle], [0.2.0], [https://github.com/hroptatyr/truffle])
+AC_INIT([truffle], [0.2.1.GIT], [https://github.com/hroptatyr/truffle])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_HEADER([src/config.h])
 AC_CONFIG_MACRO_DIR([m4])
