test, add regression for printing from stdin

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -33,6 +33,10 @@ TESTS += print_07.clit
 TESTS += print_08.clit
 TESTS += print_09.clit
 TESTS += print_10.clit
+TESTS += print_11.clit
+TESTS += print_12.clit
+TESTS += print_13.clit
+TESTS += print_14.clit
 EXTRA_DIST += print_01.trod
 EXTRA_DIST += print_02.trod
 EXTRA_DIST += print_03.trod
