--- a/configure.ac
+++ b/configure.ac
@@ -27,8 +27,8 @@ AM_INIT_AUTOMAKE([foreign parallel-tests dist-xz color-tests subdir-objects])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 ## the build chain
-AC_PROG_CC([icc tcc gcc cc])
-SXE_CHECK_CC([gnu11 gnu99])
+AC_PROG_CC([cc icc gcc])
+SXE_CHECK_CC([gnu11 c11])
 SXE_CHECK_CFLAGS
 AC_CHECK_TOOLS([AR], [xiar ar], [false])
 AC_C_BIGENDIAN
