minor, check chronological order of output

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -121,6 +121,8 @@ TESTS += roll_21.clit
 TESTS += roll_22.clit
 TESTS += roll_23.clit
 TESTS += roll_24.clit
+EXTRA_DIST += roll_25.tser
+EXTRA_DIST += roll_25.trod
 
 TESTS += string_symbols_01.clit
 TESTS += string_symbols_02.clit
